--- a/Ceriyo.Library/Content/GUI/Layouts/MainMenu.xml
+++ b/Ceriyo.Library/Content/GUI/Layouts/MainMenu.xml
@@ -3,6 +3,7 @@
   <Components>
     <UIComponent>
       <ComponentType>Window</ComponentType>
+      <Visible>true</Visible>
       <Name>MainMenuWindow</Name>
       <SizeX>600</SizeX>
       <SizeY>500</SizeY>
@@ -63,6 +64,78 @@
           <PositionY>50</PositionY>
           <Text>Exit</Text>
           <Anchor>None</Anchor>
+        </UIComponent>
+      </Children>
+    </UIComponent>
+
+    <UIComponent>
+      <ComponentType>Window</ComponentType>
+      <Visible>false</Visible>
+      <Name>DirectConnectWindow</Name>
+      <SizeX>300</SizeX>
+      <SizeY>200</SizeY>
+      <PositionX>0</PositionX>
+      <PositionY>0</PositionY>
+      <Title>Direct Connect</Title>
+      <Text />
+      <Resizeable>false</Resizeable>
+      <Anchor>None</Anchor>
+      <CursorType>default</CursorType>
+      <Modal>true</Modal>
+      <Children>
+        <UIComponent>
+          <ComponentType>Button</ComponentType>
+          <Name>btnConnect</Name>
+          <SizeX>80</SizeX>
+          <SizeY>35</SizeY>
+          <PositionX>-10</PositionX>
+          <PositionY>60</PositionY>
+          <Text>Connect</Text>
+        </UIComponent>
+        <UIComponent>
+          <ComponentType>Button</ComponentType>
+          <Name>btnCancel</Name>
+          <SizeX>80</SizeX>
+          <SizeY>35</SizeY>
+          <PositionX>80</PositionX>
+          <PositionY>60</PositionY>
+          <Text>Cancel</Text>
+        </UIComponent>
+        <UIComponent>
+          <ComponentType>TextBox</ComponentType>
+          <Name>txtIPAddress</Name>
+          <SizeX>175</SizeX>
+          <SizeY>35</SizeY>
+          <PositionX>40</PositionX>
+          <PositionY>-30</PositionY>
+          <Text></Text>
+        </UIComponent>
+        <UIComponent>
+          <ComponentType>TextBox</ComponentType>
+          <Name>txtPassword</Name>
+          <SizeX>175</SizeX>
+          <SizeY>35</SizeY>
+          <PositionX>40</PositionX>
+          <PositionY>10</PositionY>
+          <Text></Text>
+        </UIComponent>
+        <UIComponent>
+          <ComponentType>Label</ComponentType>
+          <Name>lblIPAddress</Name>
+          <SizeX>90</SizeX>
+          <SizeY>35</SizeY>
+          <PositionX>-90</PositionX>
+          <PositionY>-30</PositionY>
+          <Text>IP Address:</Text>
+        </UIComponent>
+        <UIComponent>
+          <ComponentType>Label</ComponentType>
+          <Name>lblPassword</Name>
+          <SizeX>90</SizeX>
+          <SizeY>35</SizeY>
+          <PositionX>-90</PositionX>
+          <PositionY>10</PositionY>
+          <Text>Password:</Text>
         </UIComponent>
       </Children>
     </UIComponent>
