--- a/Ceriyo.Toolset/Windows/SaveScriptWindow.xaml
+++ b/Ceriyo.Toolset/Windows/SaveScriptWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Ceriyo.Toolset.Windows.SaveScriptWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Save Script" Height="110" Width="221" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" ShowInTaskbar="False">
+        Title="Save Script" Height="110" Width="221" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" ShowInTaskbar="False" Closing="Window_Closing">
     <Grid>
         <Label Content="Script Name:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <TextBox Name="txtScriptName" 
