--- a/Ceriyo.Toolset/Components/RaceEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/RaceEditorComponent.xaml
@@ -30,7 +30,7 @@
     		BorderBrush="Black" 
     		ItemsSource="{Binding Races}"
     		SelectedItem="{Binding SelectedRace, Mode=TwoWay}"
-            SelectionChanged="SkillSelected"
+            SelectionChanged="RaceSelected"
     		DisplayMemberPath="Name"
             Margin="0,27,0,41"/>
         <Label Content="Races:" 
