Hot bar icon addition

--- a/Ceriyo.Toolset/Components/HotBarControl.xaml
+++ b/Ceriyo.Toolset/Components/HotBarControl.xaml
@@ -10,8 +10,11 @@
             <Button Name="btnScriptEditor" Click="btnScriptEditor_Click">
                 <Image Source="/Images/script.png" Height="15" Width="15" ToolTip="Script Editor"></Image>
             </Button>
-            <Button Name="btnDialogEditor">
+            <Button Name="btnDialogEditor" Click="btnDialogEditor_Click">
                 <Image Source="/Images/view-list-tree-2.png" Height="15" Width="15" ToolTip="Dialog Editor"></Image>
+            </Button>
+            <Button Name="btnStartLocation" Click="btnStartLocation_Click">
+                <Image Source="/Images/arrow-in.png" Height="15" Width="15" ToolTip="Set Start Location"></Image>
             </Button>
         </ToolBar>
     </Grid>
