Key configuration and input packet sending

--- a/Ceriyo.Library/Content/GUI/Layouts/GameMenu.xml
+++ b/Ceriyo.Library/Content/GUI/Layouts/GameMenu.xml
@@ -13,6 +13,7 @@
       <Resizeable>false</Resizeable>
       <Anchor>None</Anchor>
       <CursorType>default</CursorType>
+      <Visible>false</Visible>
       <Children>
       </Children>
     </UIComponent>
