--- a/Ceriyo.Toolset/Windows/EditDialogWindow.xaml
+++ b/Ceriyo.Toolset/Windows/EditDialogWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Ceriyo.Toolset.Windows.EditDialogWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="EditDialogWindow" Height="300" Width="300">
+        Title="EditDialogWindow" Height="300" Width="300" Closing="Window_Closing">
     <Grid>
         
     </Grid>
