--- a/Ceriyo.Toolset/Components/MenuBarComponent.xaml
+++ b/Ceriyo.Toolset/Components/MenuBarComponent.xaml
@@ -12,13 +12,13 @@
                 <MenuItem Header="Open Module" Click="MenuItem_Click"></MenuItem>
                 <MenuItem Header="Close Module"></MenuItem>
                 <Separator></Separator>
-                <MenuItem Header="Save"></MenuItem>
-                <MenuItem Header="Save As..."></MenuItem>
+                <MenuItem Header="Save" Click="SaveModule"></MenuItem>
+                <MenuItem Header="Save As..." Click="SaveAsModule"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Header="Import"></MenuItem>
                 <MenuItem Header="Export"></MenuItem>
                 <Separator></Separator>
-                <MenuItem Name="miExit" Header="Exit" Click="miExit_Click"></MenuItem>
+                <MenuItem Header="Exit" Click="miExit_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="Edit">
                 <MenuItem Header="Undo"></MenuItem>
@@ -34,10 +34,10 @@
                 </MenuItem>
             </MenuItem>
             <MenuItem Header="Resources">
-                <MenuItem Name="miResourceEditor" Header="Editor" Click="OpenResourceEditor"></MenuItem>
-                <MenuItem Name="miManageResources" Header="Manage" Click="OpenResourceManager"></MenuItem>
+                <MenuItem Header="Editor" Click="OpenResourceEditor"></MenuItem>
+                <MenuItem Header="Manage" Click="OpenResourceManager"></MenuItem>
                 <Separator></Separator>
-                <MenuItem Name="miBuildModule" Header="Build Module" Click="BuildModule"></MenuItem>
+                <MenuItem Header="Build Module" Click="BuildModule"></MenuItem>
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="About"></MenuItem>
