--- a/Ceriyo.Toolset/Components/MenuBarComponent.xaml
+++ b/Ceriyo.Toolset/Components/MenuBarComponent.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+             Loaded="MenuBarComponent_OnLoaded"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         <Menu DockPanel.Dock="Top">
