--- a/Ceriyo.Toolset/Windows/DataEditorWindow.xaml
+++ b/Ceriyo.Toolset/Windows/DataEditorWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Components="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.Windows.DataEditorWindow"
-        Title="EditorWindow" Height="600" Width="700" Closing="Window_Closing" MinHeight="600" MinWidth="700" 
+        Title="Data Editor" Height="600" Width="700" Closing="Window_Closing" MinHeight="600" MinWidth="700" 
         WindowStartupLocation="CenterOwner">
     <Grid>
 
