Changes to the way animations and class add/remove actions are signaled across other parts of the toolkit app.

--- a/Ceriyo.Toolset/Components/ItemEditorControl.xaml
+++ b/Ceriyo.Toolset/Components/ItemEditorControl.xaml
@@ -207,7 +207,7 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Class Name"
                                                 IsReadOnly="True"
-                                                Binding="{Binding CharacterClass.Name}">
+                                                Binding="{Binding ClassName}">
                             </DataGridTextColumn>
                             <DataGridTextColumn Header="Level Req."
                                                 Binding="{Binding LevelRequired}">
